--- a/.gitignore
+++ b/.gitignore
@@ -39,4 +39,6 @@
 yarn-debug.log*
 .yarn-integrity
 /public/uploads
-/config/local_env.yml
+/config/credentials/development.key
+
+/config/credentials/production.key
