--- a/config/database.yml
+++ b/config/database.yml
@@ -22,4 +22,7 @@ test:
 
 production:
   <<: *default
-  database: db/production.sqlite3
+  adapter: postgresql
+  user: <%= Rails.application.credentials.dig(:production, :USER) %>
+  password: <%= Rails.application.credentials.dig(:production, :PASSWORD) %>
+  database: <%= Rails.application.credentials.dig(:production, :DATABASE) %>
