--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,5 @@ yarn-debug.log*
 /public/uploads
 /config/credentials/development.key
 /config/credentials/production.key
+
+/config/credentials/test.key
